--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "themeURL": "localhost:8000",
   "scripts": {
     "start": "gulp",
+    "start:quick": "gulp --quick",
     "build": "gulp build",
+    "build:quick": "gulp build --quick",
     "gulp:css": "gulp css",
     "gulp:js": "gulp js",
     "gulp:watch": "gulp watch",
@@ -25,6 +27,7 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-color": "0.0.2",
+    "gulp-if": "^2.0.2",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -35,7 +38,8 @@
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-prettier": "^1.1.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "yargs": "^13.2.4"
   },
   "dependencies": {
     "@barba/core": "^2.3.12",
