--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "boilerplate-slug",
   "version": "1.0.0",
   "private": true,
-  "themeURL": "localhost:8000",
-  "scripts": {
-    "start": "webpack-dev-server --hot --open",
-    "build": "webpack"
+  "themeConf": {
+    "proxyURL": "http://localhost:8000",
+    "port": 3000
   },
+  "scripts": {
+    "start": "webpack --watch",
+    "build": "webpack --mode=production"
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -27,8 +36,7 @@
     "stylelint-prettier": "^1.1.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
     "@barba/core": "^2.3.12",
