--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
     "port": 3000
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack --mode=production"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV='production' webpack -p",
+    "build:dev": "webpack"
   },
   "browserslist": [
     "defaults"
   ],
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -35,12 +34,13 @@
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-prettier": "^1.1.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6"
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "@barba/core": "^2.3.12",
+    "@barba/core": "^2.3.15",
     "core-js": "^3.1.4",
-    "regenerator-runtime": "^0.13.2"
+    "regenerator-runtime": "^0.13.3"
   }
 }
