--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "chokidar": "^3.0.2",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.1.0",
