--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "themeConf": {
-    "proxyURL": "http://localhost:8000",
+    "proxyTarget": "http://localhost:8000",
+    "host": "localhost",
     "port": 3000
   },
   "scripts": {
