--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "boilerplate-slug",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
-  "themeConf": {
-    "proxyTarget": "http://localhost:8000",
-    "host": "localhost",
-    "port": 3000
-  },
+  "themeConf": {},
   "scripts": {
     "start": "webpack-dev-server",
     "build": "NODE_ENV='production' webpack -p",
@@ -20,29 +16,29 @@
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "chokidar": "^3.0.2",
-    "css-loader": "^3.1.0",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-prettier": "^1.1.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "@barba/core": "^2.3.15",
-    "core-js": "^3.1.4",
+    "@barba/core": "^2.6.0",
+    "core-js": "^3.2.1",
     "regenerator-runtime": "^0.13.3"
   }
 }
