--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "boilerplate-slug",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "themeConf": {},
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "NODE_ENV='production' webpack -p",
+    "build": "cross-env NODE_ENV='production' webpack -p",
     "build:dev": "webpack"
   },
   "browserslist": [
@@ -16,11 +16,13 @@
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "chokidar": "^3.0.2",
+    "cross-env": "^5.2.1",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
