renamed so WordPress trademark is not violated

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "josias-r/wp-theme-boilerplate",
-    "description": "WordPress Theme Boilerplate by josias-r",
+    "description": "WordPack Theme Boilerplate by josias-r",
     "type": "project",
     "require": {
     },
