--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "boilerplate-slug",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "start": "wpds-scripts start",
-    "build": "wpds-scripts build"
+    "build": "wpds-scripts build",
+    "release": "standard-version"
   },
   "author": "josias-r",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
+    "standard-version": "^7.1.0",
     "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2"
